[package]
name = "test-collector-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.94", features = ["full"]}
quote = "1.0.18"
proc-macro2 = "1.0.38"
rand = "0.8.5"
inventory = "0.1.11"
test-collector-utils = { path = "../test-collector-utils" }

[dev-dependencies]
reqwest = { version = "0.11.10", features = ["json"]}
actix-web = "4"
