[package]
name = "test-collector"
version = "0.1.0"
edition = "2021"
description = "A library for setting up integration test with start up and tearndown"
keywords = ["testing", "integration-tests", "test-runner", "test-collector", "custom-runner"]
categories = ["development-tools", "development-tools::testing"]
license = "MIT/Apache-2.0"
repository = "https://github.com/MIF-0/test-collector/tree/main/test-collector-lib"
documentation = "https://docs.rs/test-collector"
readme = "README.md"
authors = ["Vladyslav Bukatin <ender.ender321.@gmail.com>"]

[dependencies]
futures = "0.3.21"
inventory = "0.1.11"
chrono = "0.4.19"
once_cell = "1.9.0"
log = "0.4.14"
env_logger = "0.9.0"
test-collector-utils = "0.1.0"
test-collector-derive = "0.1.0"

[dev-dependencies]
reqwest = { version = "0.11.10", features = ["json"]}
actix-web = "4"
dotenv = "0.15.0"
