[package]
name = "test-collector-utils"
version = "0.1.2"
edition = "2021"
description = "A utils libraty for test collector"
keywords = ["test-collector"]
categories = ["development-tools", "development-tools::testing"]
license = "MIT/Apache-2.0"
repository = "https://github.com/MIF-0/test-collector/tree/main/test-collector-utils"
documentation = "https://docs.rs/test-collector-utils"
readme = "README.md"
authors = ["Vladyslav Bukatin <ender.ender321.@gmail.com>"]

[dependencies]
inventory = "0.1.11"